[gd_scene load_steps=29 format=3 uid="uid://2ef57u2hps8a"]

[ext_resource type="Script" path="res://Characters/orang1/orang_1.gd" id="1_ynb3o"]
[ext_resource type="Texture2D" uid="uid://dmkw07xu8ppu8" path="res://Art/spr_anna.png" id="2_1leaw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5wyw4"]
size = Vector2(12, 5)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_b2wna"]
animation = &"idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_n2nm1"]
animation = &"idle_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_74kcr"]
animation = &"idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6a6xg"]
animation = &"idle_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_asftu"]
blend_point_0/node = SubResource("AnimationNodeAnimation_b2wna")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_n2nm1")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_74kcr")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_6a6xg")
blend_point_3/pos = Vector2(1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_j613c"]
animation = &"walk_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_k87rx"]
animation = &"walk_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ovwyy"]
animation = &"walk_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pnt03"]
animation = &"walk_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_a8hs5"]
blend_point_0/node = SubResource("AnimationNodeAnimation_j613c")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_k87rx")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_ovwyy")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_pnt03")
blend_point_3/pos = Vector2(-1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tm723"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dh7s7"]
advance_mode = 2
advance_condition = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jcd04"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_o27vr"]
states/idle/node = SubResource("AnimationNodeBlendSpace2D_asftu")
states/idle/position = Vector2(369, 100)
states/walk/node = SubResource("AnimationNodeBlendSpace2D_a8hs5")
states/walk/position = Vector2(516, 95)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_tm723"), "idle", "walk", SubResource("AnimationNodeStateMachineTransition_dh7s7"), "walk", "idle", SubResource("AnimationNodeStateMachineTransition_jcd04")]

[sub_resource type="Animation" id="Animation_ys5ek"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_a1pr1"]
resource_name = "idle_down"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 2]
}

[sub_resource type="Animation" id="Animation_6acp2"]
resource_name = "idle_left"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 6]
}

[sub_resource type="Animation" id="Animation_t87qp"]
resource_name = "idle_right"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [8, 10]
}

[sub_resource type="Animation" id="Animation_e0pld"]
resource_name = "idle_up"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [12, 14]
}

[sub_resource type="Animation" id="Animation_fo2rs"]
resource_name = "walk_down"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 0, 3, 2]
}

[sub_resource type="Animation" id="Animation_kvtkq"]
resource_name = "walk_left"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [5, 4, 7, 6]
}

[sub_resource type="Animation" id="Animation_seqn6"]
resource_name = "walk_right"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [9, 8, 11, 10]
}

[sub_resource type="Animation" id="Animation_tpbfk"]
resource_name = "walk_up"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [13, 12, 15, 14]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dik4i"]
_data = {
"RESET": SubResource("Animation_ys5ek"),
"idle_down": SubResource("Animation_a1pr1"),
"idle_left": SubResource("Animation_6acp2"),
"idle_right": SubResource("Animation_t87qp"),
"idle_up": SubResource("Animation_e0pld"),
"walk_down": SubResource("Animation_fo2rs"),
"walk_left": SubResource("Animation_kvtkq"),
"walk_right": SubResource("Animation_seqn6"),
"walk_up": SubResource("Animation_tpbfk")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i8rj8"]
size = Vector2(27, 29)

[node name="orang1" type="CharacterBody2D"]
script = ExtResource("1_ynb3o")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_1leaw")
hframes = 4
vframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 0
visibility_layer = 0
position = Vector2(0, 10.5)
shape = SubResource("RectangleShape2D_5wyw4")
disabled = true

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_o27vr")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/idle = false
parameters/conditions/walk = false
parameters/idle/blend_position = Vector2(-0.00166392, 0.152128)
parameters/walk/blend_position = Vector2(0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dik4i")
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_i8rj8")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
